[package]
name = "{NAME}"
version = "{VERSION}"
authors = ["Mihir Singh <git.service@mihirsingh.com>"]
edition = "2018"
license = "CC0-1.0"
description = "SVG icons for popular brands"
homepage = "https://src.doom.fm/citruspi/simple-icons-rs"
repository = "https://src.doom.fm/citruspi/simple-icons-rs"
keywords = ["icons", "svg", "simple-icons"]
categories = ["api-bindings", "graphics", "multimedia::images"]